# vitrine

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: build.yaml  ci.yml  identifier-gate.yml  link-check.yml
data/: assumptions.toml  recessions.toml  sources.toml
data/series/: cpi-new-vehicles.toml  cpi-u.toml  (+8 more)
deploy/: nginx.conf
docs/: changelog.md  citations.md  design-spec.md  fact-model.md  gap-log.md  glyph-tracker.md  ipums-compliance.md  resource-hunt.md  us-sources.md  verification-log.md
githooks/: pre-commit
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
plans/: 001-fact-model-and-us-v0.md  002-locale-split-and-artifact-objects.md  003-affordability-axis-and-cross-decade-comparability.md  004-concept-comparability-guard.md  005-composite-household-and-the-thesis.md  006-derived-facts.md  007-visualization-layer.md  008-verification-and-gap-filling.md  009-visitor-experience-pass.md  010-series-layer.md  011-affordability-view.md  012-2020s-room-refresh.md  013-early-decade-wage-anchors.md  014-corridor-expansion.md  014-presentation-architecture.md  015-transcription-audit.md  016-docent-layer.md  017-archive-wing.md  018-migration-report.md  018-presentation-architecture.md  019-recovery-log.md  019-ui-recovery-and-presentation-architecture.md  021-the-world-wing-and-the-case-for-opening.md
reflections/: 2026-07-08-glm-5-2.md  2026-07-08-kimi-k2-7.md  2026-07-09-glm-5-2.md  2026-07-10-glm-5-2-2.md  2026-07-10-glm-5-2.md  2026-07-10-gpt-5-codex-2.md  2026-07-10-gpt-5-codex.md  2026-07-11-glm-5-2.md  2026-07-11-kimi-k2-7.md  2026-07-12-glm-5-2-2.md  2026-07-12-glm-5-2.md  2026-07-13-glm-5-2.md
scripts/: ahetpi_extract.py  bls_ces_extract.py  bls_cpi_extract.py  check_committed_identifiers.py  cross_check.py  f08_income_extract.py  home_value_extract.py  install-git-hooks.sh  ipums_extract.py  link_check.py  new_car_price_extract.py
tests/: test_affordability.py  test_affordability_dashboard.py  test_architecture.py  test_browser.py  test_compare.py  test_derive.py  test_design.py  test_gaps.py  test_gate.py  test_money.py  test_render.py  test_series.py  test_site_contracts.py  test_visualization.py
(+71 files in other folders)
